--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
   <div id="wrapper">
-    <h1 id="tittle">ABREU</h1>
-    <div class="navbar" id="navbarid">
-      <a href="2021.html">MMXXI</a>
-      <a href="2022.html">MMXXII</a>
-  </div>
+    <ul>
+      <li><img src="images/icon.jpg" alt="icon" width="auto"></li>
+      <li><a href="#home">about me</a></li>
+      <li><a href="#news"># aleatorniedade</a></li>
+      <li><a href="#contact"># brevemente, a cores</a></li>
+      <li><a href="#about">contact</a></li>
+    </ul>
   </div>
 </body>
 </html>
