--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
 </head>
 <body>
-  <div id="wrapper">
+  <div class="navbar">
     <ul>
-      <li><img src="images/icon.jpg" alt="icon" width="auto"></li>
-      <li><a href="#home">about me</a></li>
+      <li><img src="images/icon.jpg" alt="icon" width="100%"></li>
+      <li><a href="index.html">about me</a></li>
       <li><a href="#news"># aleatorniedade</a></li>
       <li><a href="#contact"># brevemente, a cores</a></li>
       <li><a href="#about">contact</a></li>
     </ul>
+  </div>
+  <div class="content">
   </div>
 </body>
 </html>
