--- a/aleatorniedade.html
+++ b/aleatorniedade.html
@@ -19,11 +19,14 @@
     </ul>
   </div>
   <div class="content">
-    <p>2020 - Bachelor's Degree in Communication and Multimedia - Universidade de Trás-os-Montes e Alto Douro</p>
-    <p>2020 - Game Designer and Developer - SHARKCODERS</p>
-    <p>2020 - Virtual Reality and 3D Generalist - IZILABS SOFTWARE</p>
-    <p>2021 - Audiovisual Technician - BRAND 22 CREATIVE AGENCY</p>
-    <p>Ongoing - Masters's Degree in Sound And Image Arts - Instituto Politécnico de Leiria - Escola Superior de Artes e Design</p>
+    <p>aleatorniedade vol.1</p>
+    <iframe width="885" height="498" src="https://www.youtube.com/embed/dv0ddsgEpXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>aleatorniedade vol.2</p>
+    <iframe width="885" height="498" src="https://www.youtube.com/embed/dv0ddsgEpXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>aleatorniedade vol.3</p>
+    <iframe width="885" height="498" src="https://www.youtube.com/embed/dv0ddsgEpXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>aleatorniedade full version</p>
+    <iframe width="885" height="498" src="https://www.youtube.com/embed/dv0ddsgEpXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </body>
 </html>
