--- a/aleatorniedade.html
+++ b/aleatorniedade.html
@@ -13,20 +13,20 @@
     <ul>
       <li><img src="images/icon.jpg" alt="icon" width="100%"></li>
       <li><a href="index.html">about me</a></li>
-      <li><a href="aleatorniedade.html"># aleatorniedade</a></li>
-      <li><a href="bac.html"># brevemente, a cores</a></li>
-      <li><a href="contact.html">contact</a></li>
+      <li><a href="aleatorniedade.html">2021_aleatorniedade</a></li>
+      <li><a href="index.html">2022_brevemente, a cores</a></li>
+      <li><a href="index.html">contact</a></li>
     </ul>
   </div>
   <div class="content">
     <p>aleatorniedade vol.1</p>
     <iframe width="885" height="498" src="https://www.youtube.com/embed/dv0ddsgEpXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>aleatorniedade vol.2</p>
-    <iframe width="885" height="498" src="https://www.youtube.com/embed/dv0ddsgEpXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="885" height="498" src="https://www.youtube.com/embed/MK4MXlIX0wY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>aleatorniedade vol.3</p>
-    <iframe width="885" height="498" src="https://www.youtube.com/embed/dv0ddsgEpXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="885" height="498" src="https://www.youtube.com/embed/VGBBwHAn6Ng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>aleatorniedade full version</p>
-    <iframe width="885" height="498" src="https://www.youtube.com/embed/dv0ddsgEpXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="885" height="498" src="https://www.youtube.com/embed/fz5P6uM49Vo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </body>
 </html>
