--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <ul>
       <li><img src="images/icon.jpg" alt="icon" width="100%"></li>
       <li><a href="index.html">about me</a></li>
-      <li><a href="aleatorniedade.html"># aleatorniedade</a></li>
-      <li><a href="bac.html"># brevemente, a cores</a></li>
+      <li><a href="aleatorniedade.html">2021_aleatorniedade</a></li>
+      <li><a href="bac.html">2022_brevemente, a cores</a></li>
       <li><a href="contact.html">contact</a></li>
     </ul>
   </div>
